2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
      scripts/openjump.bat:
      Removed redundant command line option.

2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
      scripts/openjump.bat:
      Properly added bin directory to classpath, also changed to DOS line endings.

2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
      (language files),
      src/org/openjump/util/CustomTexturePaint.java,
      src/de/latlon/deejump/plugin/style/XSLUtility.java,
      src/de/latlon/deejump/plugin/style/BitmapVertexStyle.java,
      src/com/vividsolutions/jump/workbench/ui/renderer/style/FillPatternFactory.java,
      src/com/vividsolutions/jump/workbench/ui/style/BasicStylePanel.java:
      Added capability to use external graphics as fill patterns.

2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,
      src/de/latlon/deejump/plugin/style/XSLUtility.java,
      src/de/latlon/deejump/plugin/style/BitmapVertexStyle.java:
      Added proper color exporting of SVG images.

2008-02-19 Andreas Schmitz <schmitz@lat-lon.de>
      scripts/openjump.sh:
      Using $JAVA_HOME if it's set.

2008-02-14 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl:
      Added SLD-Export of SVG images.

2008-02-14 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/VertexStyleChooser.java,
      src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
      src/de/latlon/deejump/plugin/style/BitmapVertexStyle.java,
      src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java,
      src/com/vividsolutions/jump/workbench/ui/renderer/style/VertexStyle.java:
      Added support for SVGs, whose color is changed on the fly. Also fixed small bugs in the styling panel.

2008-02-07 Andreas Schmitz <schmitz@lat-lon.de>
      src/org/openjump/util/SLDImporter.java,
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl: